// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`multiselect (isCI = false) > can be aborted by a signal 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ◻ opt0
│  ◻ opt1
└
",
  "
",
  "<cursor.show>",
]
`;

exports[`multiselect (isCI = false) > can cancel 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ◻ opt0
│  ◻ opt1
└
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "■  foo
│",
  "
",
  "<cursor.show>",
]
`;

exports[`multiselect (isCI = false) > can render option hints 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ◻ opt0 (Hint 0)
│  ◻ opt1
└
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "│  ◼ opt0 (Hint 0)",
  "<cursor.down count=3>",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  opt0",
  "
",
  "<cursor.show>",
]
`;

exports[`multiselect (isCI = false) > can set cursorAt to preselect an option 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ◻ opt0
│  ◻ opt1
└
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=3>",
  "<erase.line><cursor.left count=1>",
  "│  ◼ opt1",
  "<cursor.down count=2>",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  opt1",
  "
",
  "<cursor.show>",
]
`;

exports[`multiselect (isCI = false) > can set custom labels 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ◻ Option 0
│  ◻ Option 1
└
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "│  ◼ Option 0",
  "<cursor.down count=3>",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  Option 0",
  "
",
  "<cursor.show>",
]
`;

exports[`multiselect (isCI = false) > can set initial values 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ◻ opt0
│  ◼ opt1
└
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  opt1",
  "
",
  "<cursor.show>",
]
`;

exports[`multiselect (isCI = false) > can submit without selection when required = false 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ◻ opt0
│  ◻ opt1
└
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  none",
  "
",
  "<cursor.show>",
]
`;

exports[`multiselect (isCI = false) > maxItems renders a sliding window 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ◻ opt0
│  ◻ opt1
│  ◻ opt2
│  ◻ opt3
│  ◻ opt4
│  ...
└
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=2>",
  "<erase.down>",
  "│  ...
│  ◻ opt2
│  ◻ opt3
│  ◻ opt4
│  ◻ opt5
│  ...
└
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=3>",
  "<erase.down>",
  "│  ◻ opt3
│  ◻ opt4
│  ◻ opt5
│  ◻ opt6
│  ...
└
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=3>",
  "<erase.down>",
  "│  ◻ opt4
│  ◻ opt5
│  ◻ opt6
│  ◻ opt7
│  ...
└
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=5>",
  "<erase.line><cursor.left count=1>",
  "│  ◼ opt6",
  "<cursor.down count=4>",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  opt6",
  "
",
  "<cursor.show>",
]
`;

exports[`multiselect (isCI = false) > renders disabled options 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ◻ opt0
│  ◻ opt1
│  ◻ opt2 (Hint 2)
└
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=3>",
  "<erase.line><cursor.left count=1>",
  "│  ◼ opt1",
  "<cursor.down count=3>",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  opt1",
  "
",
  "<cursor.show>",
]
`;

exports[`multiselect (isCI = false) > renders message 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ◻ opt0
│  ◻ opt1
└
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "│  ◼ opt0",
  "<cursor.down count=3>",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  opt0",
  "
",
  "<cursor.show>",
]
`;

exports[`multiselect (isCI = false) > renders multiple cancelled values 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ◻ opt0
│  ◻ opt1
│  ◻ opt2
└
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "│  ◼ opt0",
  "<cursor.down count=4>",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=3>",
  "<erase.line><cursor.left count=1>",
  "│  ◼ opt1",
  "<cursor.down count=3>",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "■  foo
│  opt0, opt1
│",
  "
",
  "<cursor.show>",
]
`;

exports[`multiselect (isCI = false) > renders multiple selected options 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ◻ opt0
│  ◻ opt1
│  ◻ opt2
└
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "│  ◼ opt0",
  "<cursor.down count=4>",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=3>",
  "<erase.line><cursor.left count=1>",
  "│  ◼ opt1",
  "<cursor.down count=3>",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  opt0, opt1",
  "
",
  "<cursor.show>",
]
`;

exports[`multiselect (isCI = false) > renders validation errors 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ◻ opt0
│  ◻ opt1
└
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "▲  foo
│  ◻ opt0
│  ◻ opt1
└  Please select at least one option.
   Press  space  to select,  enter  to submit
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◆  foo
│  ◼ opt0
│  ◻ opt1
└
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  opt0",
  "
",
  "<cursor.show>",
]
`;

exports[`multiselect (isCI = false) > shows hints for all selected options 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ◼ opt0 (Hint 0)
│  ◼ opt1 (Hint 1)
│  ◻ opt2
└
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=4>",
  "<erase.line><cursor.left count=1>",
  "│  ◻ opt2 (Hint 2)",
  "<cursor.down count=2>",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  opt0, opt1",
  "
",
  "<cursor.show>",
]
`;

exports[`multiselect (isCI = false) > sliding window loops downwards 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ◻ opt0
│  ◻ opt1
│  ◻ opt2
│  ◻ opt3
│  ◻ opt4
│  ...
└
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=2>",
  "<erase.down>",
  "│  ...
│  ◻ opt2
│  ◻ opt3
│  ◻ opt4
│  ◻ opt5
│  ...
└
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=3>",
  "<erase.down>",
  "│  ◻ opt3
│  ◻ opt4
│  ◻ opt5
│  ◻ opt6
│  ...
└
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=3>",
  "<erase.down>",
  "│  ◻ opt4
│  ◻ opt5
│  ◻ opt6
│  ◻ opt7
│  ...
└
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=3>",
  "<erase.down>",
  "│  ◻ opt5
│  ◻ opt6
│  ◻ opt7
│  ◻ opt8
│  ...
└
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=3>",
  "<erase.down>",
  "│  ◻ opt6
│  ◻ opt7
│  ◻ opt8
│  ◻ opt9
│  ...
└
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=3>",
  "<erase.down>",
  "│  ◻ opt7
│  ◻ opt8
│  ◻ opt9
│  ◻ opt10
│  ◻ opt11
└
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=2>",
  "<erase.down>",
  "│  ◻ opt0
│  ◻ opt1
│  ◻ opt2
│  ◻ opt3
│  ◻ opt4
│  ...
└
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "│  ◼ opt0",
  "<cursor.down count=7>",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  opt0",
  "
",
  "<cursor.show>",
]
`;

exports[`multiselect (isCI = false) > sliding window loops upwards 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ◻ opt0
│  ◻ opt1
│  ◻ opt2
│  ◻ opt3
│  ◻ opt4
│  ...
└
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=2>",
  "<erase.down>",
  "│  ...
│  ◻ opt7
│  ◻ opt8
│  ◻ opt9
│  ◻ opt10
│  ◻ opt11
└
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=7>",
  "<erase.line><cursor.left count=1>",
  "│  ◼ opt11",
  "<cursor.down count=2>",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  opt11",
  "
",
  "<cursor.show>",
]
`;

exports[`multiselect (isCI = false) > wraps cancelled state with long options 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ◻ Option 0 Option 0 Option 0 Option 0
│   Option 0 Option 0 Option 0 Option 0 
│  Option 0 Option 0
│  ◻ Option 1 Option 1 Option 1 Option 1
│   Option 1 Option 1 Option 1 Option 1 
│  Option 1 Option 1
└
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "│  ◼ Option 0 Option 0 Option 0 Option 0",
  "<cursor.down count=7>",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=1>",
  "<erase.down>",
  "■  foo
│  Option 0 Option 0 Option 0 Option 0 
│  Option 0 Option 0 Option 0 Option 0 
│  Option 0 Option 0
│",
  "
",
  "<cursor.show>",
]
`;

exports[`multiselect (isCI = false) > wraps long messages 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo foo foo foo foo foo foo foo foo 
│  foo foo foo foo foo foo foo foo foo 
│  foo foo
│  ◻ opt0
│  ◻ opt1
└
",
  "<cursor.backward count=999><cursor.up count=7>",
  "<cursor.down count=4>",
  "<erase.line><cursor.left count=1>",
  "│  ◼ opt0",
  "<cursor.down count=3>",
  "<cursor.backward count=999><cursor.up count=7>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo foo foo foo foo foo foo foo foo 
│  foo foo foo foo foo foo foo foo foo 
│  foo foo
│  opt0",
  "
",
  "<cursor.show>",
]
`;

exports[`multiselect (isCI = false) > wraps success state with long options 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ◻ Option 0 Option 0 Option 0 Option 0
│   Option 0 Option 0 Option 0 Option 0 
│  Option 0 Option 0
│  ◻ Option 1 Option 1 Option 1 Option 1
│   Option 1 Option 1 Option 1 Option 1 
│  Option 1 Option 1
└
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "│  ◼ Option 0 Option 0 Option 0 Option 0",
  "<cursor.down count=7>",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  Option 0 Option 0 Option 0 Option 0 
│  Option 0 Option 0 Option 0 Option 0 
│  Option 0 Option 0",
  "
",
  "<cursor.show>",
]
`;

exports[`multiselect (isCI = true) > can be aborted by a signal 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ◻ opt0
│  ◻ opt1
└
",
  "
",
  "<cursor.show>",
]
`;

exports[`multiselect (isCI = true) > can cancel 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ◻ opt0
│  ◻ opt1
└
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "■  foo
│",
  "
",
  "<cursor.show>",
]
`;

exports[`multiselect (isCI = true) > can render option hints 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ◻ opt0 (Hint 0)
│  ◻ opt1
└
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "│  ◼ opt0 (Hint 0)",
  "<cursor.down count=3>",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  opt0",
  "
",
  "<cursor.show>",
]
`;

exports[`multiselect (isCI = true) > can set cursorAt to preselect an option 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ◻ opt0
│  ◻ opt1
└
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=3>",
  "<erase.line><cursor.left count=1>",
  "│  ◼ opt1",
  "<cursor.down count=2>",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  opt1",
  "
",
  "<cursor.show>",
]
`;

exports[`multiselect (isCI = true) > can set custom labels 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ◻ Option 0
│  ◻ Option 1
└
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "│  ◼ Option 0",
  "<cursor.down count=3>",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  Option 0",
  "
",
  "<cursor.show>",
]
`;

exports[`multiselect (isCI = true) > can set initial values 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ◻ opt0
│  ◼ opt1
└
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  opt1",
  "
",
  "<cursor.show>",
]
`;

exports[`multiselect (isCI = true) > can submit without selection when required = false 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ◻ opt0
│  ◻ opt1
└
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  none",
  "
",
  "<cursor.show>",
]
`;

exports[`multiselect (isCI = true) > maxItems renders a sliding window 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ◻ opt0
│  ◻ opt1
│  ◻ opt2
│  ◻ opt3
│  ◻ opt4
│  ...
└
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=2>",
  "<erase.down>",
  "│  ...
│  ◻ opt2
│  ◻ opt3
│  ◻ opt4
│  ◻ opt5
│  ...
└
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=3>",
  "<erase.down>",
  "│  ◻ opt3
│  ◻ opt4
│  ◻ opt5
│  ◻ opt6
│  ...
└
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=3>",
  "<erase.down>",
  "│  ◻ opt4
│  ◻ opt5
│  ◻ opt6
│  ◻ opt7
│  ...
└
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=5>",
  "<erase.line><cursor.left count=1>",
  "│  ◼ opt6",
  "<cursor.down count=4>",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  opt6",
  "
",
  "<cursor.show>",
]
`;

exports[`multiselect (isCI = true) > renders disabled options 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ◻ opt0
│  ◻ opt1
│  ◻ opt2 (Hint 2)
└
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=3>",
  "<erase.line><cursor.left count=1>",
  "│  ◼ opt1",
  "<cursor.down count=3>",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  opt1",
  "
",
  "<cursor.show>",
]
`;

exports[`multiselect (isCI = true) > renders message 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ◻ opt0
│  ◻ opt1
└
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "│  ◼ opt0",
  "<cursor.down count=3>",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  opt0",
  "
",
  "<cursor.show>",
]
`;

exports[`multiselect (isCI = true) > renders multiple cancelled values 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ◻ opt0
│  ◻ opt1
│  ◻ opt2
└
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "│  ◼ opt0",
  "<cursor.down count=4>",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=3>",
  "<erase.line><cursor.left count=1>",
  "│  ◼ opt1",
  "<cursor.down count=3>",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "■  foo
│  opt0, opt1
│",
  "
",
  "<cursor.show>",
]
`;

exports[`multiselect (isCI = true) > renders multiple selected options 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ◻ opt0
│  ◻ opt1
│  ◻ opt2
└
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "│  ◼ opt0",
  "<cursor.down count=4>",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=3>",
  "<erase.line><cursor.left count=1>",
  "│  ◼ opt1",
  "<cursor.down count=3>",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  opt0, opt1",
  "
",
  "<cursor.show>",
]
`;

exports[`multiselect (isCI = true) > renders validation errors 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ◻ opt0
│  ◻ opt1
└
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "▲  foo
│  ◻ opt0
│  ◻ opt1
└  Please select at least one option.
   Press  space  to select,  enter  to submit
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◆  foo
│  ◼ opt0
│  ◻ opt1
└
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  opt0",
  "
",
  "<cursor.show>",
]
`;

exports[`multiselect (isCI = true) > shows hints for all selected options 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ◼ opt0 (Hint 0)
│  ◼ opt1 (Hint 1)
│  ◻ opt2
└
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=4>",
  "<erase.line><cursor.left count=1>",
  "│  ◻ opt2 (Hint 2)",
  "<cursor.down count=2>",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  opt0, opt1",
  "
",
  "<cursor.show>",
]
`;

exports[`multiselect (isCI = true) > sliding window loops downwards 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ◻ opt0
│  ◻ opt1
│  ◻ opt2
│  ◻ opt3
│  ◻ opt4
│  ...
└
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=2>",
  "<erase.down>",
  "│  ...
│  ◻ opt2
│  ◻ opt3
│  ◻ opt4
│  ◻ opt5
│  ...
└
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=3>",
  "<erase.down>",
  "│  ◻ opt3
│  ◻ opt4
│  ◻ opt5
│  ◻ opt6
│  ...
└
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=3>",
  "<erase.down>",
  "│  ◻ opt4
│  ◻ opt5
│  ◻ opt6
│  ◻ opt7
│  ...
└
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=3>",
  "<erase.down>",
  "│  ◻ opt5
│  ◻ opt6
│  ◻ opt7
│  ◻ opt8
│  ...
└
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=3>",
  "<erase.down>",
  "│  ◻ opt6
│  ◻ opt7
│  ◻ opt8
│  ◻ opt9
│  ...
└
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=3>",
  "<erase.down>",
  "│  ◻ opt7
│  ◻ opt8
│  ◻ opt9
│  ◻ opt10
│  ◻ opt11
└
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=2>",
  "<erase.down>",
  "│  ◻ opt0
│  ◻ opt1
│  ◻ opt2
│  ◻ opt3
│  ◻ opt4
│  ...
└
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "│  ◼ opt0",
  "<cursor.down count=7>",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  opt0",
  "
",
  "<cursor.show>",
]
`;

exports[`multiselect (isCI = true) > sliding window loops upwards 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ◻ opt0
│  ◻ opt1
│  ◻ opt2
│  ◻ opt3
│  ◻ opt4
│  ...
└
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=2>",
  "<erase.down>",
  "│  ...
│  ◻ opt7
│  ◻ opt8
│  ◻ opt9
│  ◻ opt10
│  ◻ opt11
└
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=7>",
  "<erase.line><cursor.left count=1>",
  "│  ◼ opt11",
  "<cursor.down count=2>",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  opt11",
  "
",
  "<cursor.show>",
]
`;

exports[`multiselect (isCI = true) > wraps cancelled state with long options 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ◻ Option 0 Option 0 Option 0 Option 0
│   Option 0 Option 0 Option 0 Option 0 
│  Option 0 Option 0
│  ◻ Option 1 Option 1 Option 1 Option 1
│   Option 1 Option 1 Option 1 Option 1 
│  Option 1 Option 1
└
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "│  ◼ Option 0 Option 0 Option 0 Option 0",
  "<cursor.down count=7>",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=1>",
  "<erase.down>",
  "■  foo
│  Option 0 Option 0 Option 0 Option 0 
│  Option 0 Option 0 Option 0 Option 0 
│  Option 0 Option 0
│",
  "
",
  "<cursor.show>",
]
`;

exports[`multiselect (isCI = true) > wraps long messages 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo foo foo foo foo foo foo foo foo 
│  foo foo foo foo foo foo foo foo foo 
│  foo foo
│  ◻ opt0
│  ◻ opt1
└
",
  "<cursor.backward count=999><cursor.up count=7>",
  "<cursor.down count=4>",
  "<erase.line><cursor.left count=1>",
  "│  ◼ opt0",
  "<cursor.down count=3>",
  "<cursor.backward count=999><cursor.up count=7>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo foo foo foo foo foo foo foo foo 
│  foo foo foo foo foo foo foo foo foo 
│  foo foo
│  opt0",
  "
",
  "<cursor.show>",
]
`;

exports[`multiselect (isCI = true) > wraps success state with long options 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ◻ Option 0 Option 0 Option 0 Option 0
│   Option 0 Option 0 Option 0 Option 0 
│  Option 0 Option 0
│  ◻ Option 1 Option 1 Option 1 Option 1
│   Option 1 Option 1 Option 1 Option 1 
│  Option 1 Option 1
└
",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "│  ◼ Option 0 Option 0 Option 0 Option 0",
  "<cursor.down count=7>",
  "<cursor.backward count=999><cursor.up count=9>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  Option 0 Option 0 Option 0 Option 0 
│  Option 0 Option 0 Option 0 Option 0 
│  Option 0 Option 0",
  "
",
  "<cursor.show>",
]
`;
